--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,15 +1,12 @@
 prn #-5
 bne LOOP(r4,r3)
-mcr m1
 sub r1, r4
 bne END
-endmcr
-m1
-mcr	m2
+sub r1, r4
+bne END
 sub	r1, r5
 bne LOOP(r4, r3)
 dec	r1
-endmcr
 L1: inc K
 bne LOOP(K,STR)
 END: stop
@@ -28,4 +25,6 @@ END: stop
 STR: .string “abcdef”
 LENGTH: .data 6,-9,15
 K: .data 22
-m2
+sub	r1, r5
+bne LOOP(r4, r3)
+dec	r1
