Added nested macro functionality

--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -4,9 +4,13 @@ sub r1, r4
 bne END
 sub r1, r4
 bne END
+sub r1, r4
+bne END
 sub	r1, r5
 bne LOOP(r4, r3)
 dec	r1
+sub r1, r4
+bne END
 L1: inc K
 bne LOOP(K,STR)
 END: stop
@@ -25,6 +29,8 @@ END: stop
 STR: .string “abcdef”
 LENGTH: .data 6,-9,15
 K: .data 22
+sub r1, r4
+bne END
 sub	r1, r5
 bne LOOP(r4, r3)
 dec	r1
