--- a/System_programming_lab_project/System_programming_lab_project.vcxproj.filters
+++ b/System_programming_lab_project/System_programming_lab_project.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="debug.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="symbol_table.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="memory.h">
