--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,4 +1,4 @@
-prn #-5
+END: mov #-1,r7
 bne LOOP(r4,r3)
 sub r1, r4
 bne END
@@ -11,6 +11,7 @@ bne LOOP(r4, r3)
 dec	r1
 L1: inc K
 bne LOOP(K,STR)
+END: prn #-5
 END: stop
 STR: .string “abcdef”
 LENGTH: .data 6,-9,15
