--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,3 +1,4 @@
+LENGTH: .data 6,-9,15
 END: prn #-5
 bne LOOP(r4,r3)
 sub r1, r4
@@ -6,18 +7,18 @@ sub r1, r4
 bne END
 sub r1, r4
 bne END
-sub	r1, r5
-bne LOOP(r4, r3)
-dec	r1
+sub r1, r5
+bne LOOP(r4,r3)
+dec r1
 L1: inc K
 bne LOOP(K,STR)
 END: prn #-5
 END: stop
-STR: .string “abcdef”
+STR: .string "abcdef"
 LENGTH: .data 6,-9,15
 K: .data 22
 MAIN: mov r3 ,LENGTH
-LOOP: jmp r8(#-1,r6)
+LOOP: jmp L1(#-1,r6)
 prn #-5
 bne LOOP(r4,r3)
 sub r1, r4
@@ -25,11 +26,11 @@ bne END
 L1: inc K
 bne LOOP(K,STR)
 END: stop
-STR: .string “abcdef”
+STR: .string "abcdef"
 LENGTH: .data 6,-9,15
 K: .data 22
 sub r1, r4
 bne END
-sub	r1, r5
-bne LOOP(r4, r3)
-dec	r1
+sub r1, r5
+bne LOOP(r4,r3)
+dec r1
