--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,4 +1,5 @@
-LENGTH: .data 6,-9,15A
+bne LOOP(9r4,STR)
+LENGTH: .data 6,-9,15
 END: prn #-5
 bne LOOP(r4,r3)
 sub r1, r4
@@ -18,7 +19,7 @@ STR: .string "abcdef"
 LENGTH: .data 6,-9,15
 K: .data 22
 MAIN: mov r3 ,LENGTH
-LOOP: jmp L1(#-1,r6)
+LOOP: jmp L1(#-1,r7)
 prn #-5
 bne LOOP(r4,r3)
 sub r1, r4
