--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,4 +1,4 @@
-STR: .string "abcdef"  asf
+bne LOOP(r4,#+515)  
 .entry ENTRY
 .extern EXTREN
 LENGTH: .data 6,-9,15
@@ -18,7 +18,7 @@ bne LOOP(K,STR)
 END: prn #-5
 END: stop
 STR: .string "abcdef"
-LENGTH: .data 6,-9,15
+LENGTH: .data +6,-9,?15
 K: .data 22
 MAIN: mov r3 ,LENGTH
 LOOP: jmp L1(#-1,r7)
