added functions for encoding

--- a/System_programming_lab_project/System_programming_lab_project.vcxproj.filters
+++ b/System_programming_lab_project/System_programming_lab_project.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="symbol_table.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="encoding.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="memory.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="encoding.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
