--- a/System_programming_lab_project/System_programming_lab_project.vcxproj
+++ b/System_programming_lab_project/System_programming_lab_project.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="debug.c" />
+    <ClCompile Include="encoding.c" />
     <ClCompile Include="first_pass.c" />
     <ClCompile Include="line_iterator.c" />
     <ClCompile Include="main.c" />
@@ -141,6 +142,7 @@
   <ItemGroup>
     <ClInclude Include="constants.h" />
     <ClInclude Include="debug.h" />
+    <ClInclude Include="encoding.h" />
     <ClInclude Include="first_pass.h" />
     <ClInclude Include="line_iterator.h" />
     <ClInclude Include="memory.h" />
