--- a/System_programming_lab_project/System_programming_lab_project.vcxproj
+++ b/System_programming_lab_project/System_programming_lab_project.vcxproj
@@ -155,7 +155,7 @@
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="SOURCE_FILE_TEST.TXT" />
+    <Text Include="SOURCE_FILE_TEST.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
