--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,14 +1,12 @@
+MAIN: mov r3 ,LENGTH
 LOOP: jmp L1(#-1,r6)
-bne LOOP(K,LOOP)
-L1: inc K
-sub r1, r4
-bne END
 prn #-5
-bne LOOP(r4,r3)
+bne LOOP(r4,r7)
 sub r1, r4
-bne END
+bne ENDD
+L1: inc K
+bne LOOP(K,STR)
 END: stop
 STR: .string "abcdef"
 LENGTH: .data 6,-9,15
 K: .data 22
-MAIN: mov r3 ,LENGTH
