error handling + label detection fixed

--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,9 +1,9 @@
-MAIN: mov r3 ,LENGTH
-LOOP: jmp L1(#-1,r6)
-prn #-5
+MAIN: mov r3 ,LENGTAAA
+LOOP: jmp L2(#-1,r6)
+prn AAAAA
 bne LOOP(r4,r7)
 sub r1, r4
-bne ENDD
+bne END
 L1: inc K
 bne LOOP(K,STR)
 END: stop
