--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,16 +1,12 @@
-.entry LENGTH
-.extern W
 MAIN: mov r3 ,LENGTH
 LOOP: jmp L1(#-1,r6)
 prn #-5
-bne W(r4,r5)
+bne LOOP(r4,r3)
 sub r1, r4
-bne L3
+bne END
 L1: inc K
-.entry LOOP
-bne LOOP(K,W)
+bne LOOP(K,STR)
 END: stop
 STR: .string "abcdef"
 LENGTH: .data 6,-9,15
 K: .data 22
-.extern L3
