--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,16 +1,71 @@
-.entry LENGTH
-.extern W
-MAIN: mov r3 ,LENGTH
-LOOP: jmp L1(#-1,r6)
-prn #-5
-bne W(r4,r5)
-sub r1, r4
-bne L3
+r1:  mov #1, a
+stop:  
+ mov #1, #8
+ cmp L(#1,#2)
+ not #999
+ lea r1, a
+ lea a, #9
+ jmp #8
+ jsr #9
+ jmp K1(r1,r3)
+ABD:    .entry LENGTH , 5
+ .extern
+ac:     .extern W , aaff
+5AIN:  mov r3 ,LENGTH
+LOOP:  jmp L1(#-1,r6)
+       sub r1,   r4
+       bne L3
 L1: inc K
 .entry LOOP
-bne LOOP(K,W)
+ bne LOOP(K,W****)
 END: stop
-STR: .string "abcdef"
-LENGTH: .data 6,-9,15
-K: .data 22
-.extern L3
+STR:    .string "abcdef
+STR:    .string "aasfafs" 
+        .string "aasfafs"     asfasfasfsafafasfasf!!
+LENGTH .data -6 -9,15   
+LENGTH: .data -6 -9,15
+K:      .data +22 ,, 5
+        .data 22 ,, 5.5
+        .string
+        .data
+        .data +-9 
+        .data 9+ 
+        .data 9-
+         hello
+         LENGTH:   ,
+      mov ##1, abc
+      mov # , #5
+      mov 1, 2
+      mov #+ , abc
+      mov #9+89898 , GG
+      bne !temp
+      jmp 1LR
+      bne r10
+      jmp L1(#5,   N)
+      jmp L1(#5 ,N)
+      jmp 1(#5 , N)
+      jmp 1(#5,N)
+      jmp L( #5,N)
+      jmp L(#5,9
+      jmp L #5,9
+      mo
+      st
+      cm1
+      ret
+      ads
+      mov 
+      cmp abc
+      add r1, r2 , r3   , r5
+      lea ,
+      not
+      inc a, b ,c , #5
+      rts r1
+      stop     #1  , r1
+      stop K
+      mov #1 , 
+      cmp r1 ,, r2
+      jmp ,   r
+      stop ,
+      mov #1 , #2     ,
+      mov r9, r1
+ jmp K1(r1, r3)
