--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,16 +1,48 @@
-.entry LENGTH
-.extern W
-MAIN: mov r3 ,LENGTH
-LOOP: jmp L1(#-1,r6)
-prn #-5
-bne W(r4,r5)
-sub r1, r4
-bne L3
-L1: inc K
-.entry LOOP
-bne LOOP(K,W)
-END: stop
-STR: .string "abcdef"
+  mov  A, r1
+MAIN:  mov  r3 ,LENGTH
+DATA: .data 100  , 25  , +7  , -12
+.extern    LINE
+LOOP:  jmp  L1(#-1,r6)
+  inc  r2
+  mov  A, r1
+  rts
+.entry   STR
+  inc  r2
+  mov  A, r1
+  rts
+ prn  #-5
+ cmp   #-32  , K
+K: bne  LOOP(r4,r3) 
+ add #-78, r0
+.string   "hello"
+ jmp  SHALOM(LINE,LOOP)
+  sub  r1, r4
+  bne  END
+L1:  inc K
+aaa: bne LOOP(K,STR)
+  inc  r2
+  mov  A, r1
+  rts
+  sub  r1, r4
+  bne  END
+END:  stop
+HELLO:      not r7
+STR:  .string "cbasfg54"
+  red  r3
+  jsr  K
+  jmp     LINE
 LENGTH: .data 6,-9,15
-K: .data 22
-.extern L3
+ sub #22, aaa
+ lea HELLO, r5
+Num:        .data 256
+.extern   SHALOM
+ clr r4
+X: dec Num
+ red r6
+ jsr    aaa(#75,X)
+A: inc X
+.entry   LOOP
+ bne SHALOM(r2,STR)
+ inc STR
+ dec SHALOM
+ stop
