--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -1,6 +1,5 @@
-  mov  A, r1
 MAIN:  mov  r3 ,LENGTH
-DATA: .data 100  , 25  , +7  , -12
+.data 100  , 25  , +7  , -12
 .extern    LINE
 LOOP:  jmp  L1(#-1,r6)
   inc  r2
