minor changes and error handling

--- a/System_programming_lab_project/SOURCE_FILE_TEST.am
+++ b/System_programming_lab_project/SOURCE_FILE_TEST.am
@@ -15,7 +15,7 @@ LOOP:  jmp  L1(#-1,r6)
 K: bne  LOOP(r4,r3) 
  add #-78, r0
 .string   "hello"
- jmp  SHALOM(LINE,LOOP)
+ jmp  BLU(LINE,LOOP)
   sub  r1, r4
   bne  END
 L1:  inc K
